@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_config.c,v 1.18 2005-01-24 16:57:01 achu Exp $
+ *  $Id: cerebrod_config.c,v 1.19 2005-02-01 00:44:05 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -44,16 +44,15 @@ _cerebrod_config_default(void)
 
   conf.debug = 0;
   conf.configfile = CEREBROD_CONFIGFILE_DEFAULT;
-  conf.listen = CEREBROD_LISTEN_DEFAULT;
-  conf.speak = CEREBROD_SPEAK_DEFAULT;
   conf.heartbeat_frequency_min = CEREBROD_HEARTBEAT_FREQUENCY_MIN_DEFAULT;
   conf.heartbeat_frequency_max = CEREBROD_HEARTBEAT_FREQUENCY_MAX_DEFAULT;
-  conf.speak_to_port = CEREBROD_SPEAK_TO_PORT_DEFAULT;
-  conf.speak_to_ip = CEREBROD_SPEAK_TO_IP_DEFAULT;
+  conf.heartbeat_destination_port = CEREBROD_HEARTBEAT_DESTINATION_PORT_DEFAULT;
+  conf.heartbeat_destination_ip = CEREBROD_HEARTBEAT_DESTINATION_IP_DEFAULT;
+  conf.listen = CEREBROD_LISTEN_DEFAULT;
+  conf.speak = CEREBROD_SPEAK_DEFAULT;
   conf.speak_from_port = CEREBROD_SPEAK_FROM_PORT_DEFAULT;
   conf.speak_from_network_interface = NULL;
   conf.speak_ttl = CEREBROD_SPEAK_TTL_DEFAULT;
-  conf.listen_port = CEREBROD_LISTEN_PORT_DEFAULT;
   conf.listen_threads = CEREBROD_LISTEN_THREADS_DEFAULT;
 }
 
@@ -181,22 +180,23 @@ _cb_stringptr(conffile_t cf, struct conffile_data *data,
 static void
 _cerebrod_config_parse(void)
 {
-  int heartbeat_frequency_flag, listen_flag, speak_flag, speak_to_port_flag, 
-    speak_to_ip_flag, speak_from_port_flag, speak_from_network_interface_flag, 
-    speak_ttl_flag, listen_port_flag, listen_threads_flag;
+  int heartbeat_frequency_flag, heartbeat_destination_port_flag, 
+    heartbeat_destination_ip_flag, listen_flag, speak_flag, 
+    speak_from_port_flag, speak_from_network_interface_flag, 
+    speak_ttl_flag, listen_threads_flag;
 
   struct conffile_option options[] =
     {
       {"heartbeat_frequency", CONFFILE_OPTION_LIST_INT, -1, _cb_heartbeat_freq,
        1, 0, &heartbeat_frequency_flag, NULL, 0},
+      {"heartbeat_destination_port", CONFFILE_OPTION_INT, -1, conffile_int,
+       1, 0, &heartbeat_destination_port_flag, &(conf.heartbeat_destination_port), 0},
+      {"heartbeat_destination_ip", CONFFILE_OPTION_STRING, -1, _cb_stringptr,
+       1, 0, &heartbeat_destination_ip_flag, &(conf.heartbeat_destination_ip), 0},
       {"listen", CONFFILE_OPTION_BOOL, -1, conffile_bool,
        1, 0, &listen_flag, &conf.listen, 0},
       {"speak", CONFFILE_OPTION_BOOL, -1, conffile_bool,
        1, 0, &speak_flag, &conf.speak, 0},
-      {"speak_to_port", CONFFILE_OPTION_INT, -1, conffile_int,
-       1, 0, &speak_to_port_flag, &(conf.speak_to_port), 0},
-      {"speak_to_ip", CONFFILE_OPTION_STRING, -1, _cb_stringptr,
-       1, 0, &speak_to_ip_flag, &(conf.speak_to_ip), 0},
       {"speak_from_port", CONFFILE_OPTION_INT, -1, conffile_int,
        1, 0, &speak_from_port_flag, &(conf.speak_from_port), 0},
       {"speak_from_network_interface", CONFFILE_OPTION_STRING, -1, _cb_stringptr,
@@ -204,8 +204,6 @@ _cerebrod_config_parse(void)
        &(conf.speak_from_network_interface), 0},
       {"speak_ttl", CONFFILE_OPTION_INT, -1, conffile_int,
        1, 0, &speak_ttl_flag, &(conf.speak_ttl), 0},
-      {"listen_port", CONFFILE_OPTION_INT, -1, conffile_int,
-       1, 0, &listen_port_flag, &(conf.listen_port), 0},
       {"listen_threads", CONFFILE_OPTION_INT, -1, conffile_int,
        1, 0, &listen_threads_flag, &(conf.listen_threads), 0},
     };
@@ -236,9 +234,9 @@ _cerebrod_config_check(void)
 {
   struct in_addr addr_temp;
   
-  if (!Inet_pton(AF_INET, conf.speak_to_ip, &addr_temp))
-    err_exit("speak to IP address '%s' improperly format",
-	     conf.speak_from_network_interface);
+  if (!Inet_pton(AF_INET, conf.heartbeat_destination_ip, &addr_temp))
+    err_exit("heartbeat destination IP address '%s' improperly format",
+	     conf.heartbeat_destination_ip);
 
   if (conf.speak_from_network_interface
       && strchr(conf.speak_from_network_interface, '.'))
@@ -270,24 +268,24 @@ _cerebrod_config_check(void)
 static void
 _cerebrod_calculate_multicast(void)
 {
-  if (strchr(conf.speak_to_ip, '.'))
+  if (strchr(conf.heartbeat_destination_ip, '.'))
     {
-      char *speak_to_ip_cpy = Strdup(conf.speak_to_ip);
+      char *heartbeat_destination_ip_cpy = Strdup(conf.heartbeat_destination_ip);
       char *tok, *ptr;
       int ip_class;
       
-      tok = strtok(speak_to_ip_cpy, ".");
+      tok = strtok(heartbeat_destination_ip_cpy, ".");
       ip_class = strtol(tok, &ptr, 10);
       if (ptr != (tok + strlen(tok)))
-	err_exit("speak to IP address '%s' improperly format",
-		 conf.speak_from_network_interface);
+	err_exit("heartbeat destination IP address '%s' improperly format",
+		 conf.heartbeat_destination_ip);
       
       if (ip_class >= MULTICAST_CLASS_MIN
 	  && ip_class <= MULTICAST_CLASS_MAX)
 	conf.multicast = 1;
       else
 	conf.multicast = 0;
-      Free(speak_to_ip_cpy);
+      Free(heartbeat_destination_ip_cpy);
     }
 }
 
@@ -301,11 +299,11 @@ _cerebrod_calculate_heartbeat_frequency_ranged(void)
 }
 
 static void
-_cerebrod_calculate_speak_to_in_addr(void)
+_cerebrod_calculate_heartbeat_destination_in_addr(void)
 {
-  if (!Inet_pton(AF_INET, conf.speak_to_ip, &conf.speak_to_in_addr))
-    err_exit("speak to IP address '%s' improperly format",
-	     conf.speak_from_network_interface);
+  if (!Inet_pton(AF_INET, conf.heartbeat_destination_ip, &conf.heartbeat_destination_in_addr))
+    err_exit("heartbeat destination IP address '%s' improperly format",
+	     conf.heartbeat_destination_ip);
 }
 
 /* From Unix Network Programming, by R. Stevens, Chapter 16 */
@@ -628,7 +626,7 @@ _cerebrod_calculate_configuration(void)
   _cerebrod_calculate_heartbeat_frequency_ranged();
 
   /* Step 2: Calculate the destination ip */
-  _cerebrod_calculate_speak_to_in_addr();
+  _cerebrod_calculate_heartbeat_destination_in_addr();
 
   /* Step 3: Determine the appropriate network interface to use based
    * on the user's speak_from_network_interface input.
@@ -649,13 +647,14 @@ _cerebrod_config_dump(void)
       fprintf(stderr, "* configfile: \"%s\"\n", conf.configfile);
       fprintf(stderr, "* heartbeat_frequency_min: %d\n", conf.heartbeat_frequency_min);
       fprintf(stderr, "* heartbeat_frequency_max: %d\n", conf.heartbeat_frequency_max);
+      fprintf(stderr, "* heartbeat_destination_port: %d\n", conf.heartbeat_destination_port);
+      fprintf(stderr, "* heartbeat_destination_ip: \"%s\"\n", conf.heartbeat_destination_ip);
       fprintf(stderr, "* listen: %d\n", conf.listen);
       fprintf(stderr, "* speak: %d\n", conf.speak);
-      fprintf(stderr, "* speak_to_ip: \"%s\"\n", conf.speak_to_ip);
       fprintf(stderr, "* speak_from_port: %d\n", conf.speak_from_port);
       fprintf(stderr, "* speak_from_network_interface: \"%s\"\n", conf.speak_from_network_interface);
       fprintf(stderr, "* multicast: %d\n", conf.multicast);
-      fprintf(stderr, "* speak_to_in_addr: %s\n", inet_ntoa(conf.speak_to_in_addr));
+      fprintf(stderr, "* heartbeat_destination_in_addr: %s\n", inet_ntoa(conf.heartbeat_destination_in_addr));
       fprintf(stderr, "* speak_from_in_addr: %s\n", inet_ntoa(conf.speak_from_in_addr));
       fprintf(stderr, "* speak_from_interface_index: %d\n", conf.speak_from_interface_index);
       fprintf(stderr, "**************************************\n");
