@@ -1,5 +1,5 @@
 /*****************************************************************************\
- *  $Id: cerebrod_speaker.c,v 1.4 2005-01-24 16:57:01 achu Exp $
+ *  $Id: cerebrod_speaker.c,v 1.5 2005-02-01 00:44:05 achu Exp $
 \*****************************************************************************/
 
 #if HAVE_CONFIG_H
@@ -42,7 +42,7 @@ _cerebrod_speaker_initialize(void)
 static int
 _cerebrod_speaker_create_and_setup_socket(void)
 {
-  struct sockaddr_in speak_to_addr, speak_from_addr;
+  struct sockaddr_in heartbeat_destination_addr, speak_from_addr;
   int temp_fd;
 
   if ((temp_fd = socket(AF_INET, SOCK_DGRAM, 0)) < 0)
@@ -59,7 +59,7 @@ _cerebrod_speaker_create_and_setup_socket(void)
       int optval;
 
       memcpy(&imr.imr_multiaddr, 
-	     &conf.speak_to_in_addr,
+	     &conf.heartbeat_destination_in_addr,
 	     sizeof(struct in_addr));
       memcpy(&imr.imr_address, 
 	     &conf.speak_from_in_addr,
@@ -117,12 +117,12 @@ _cerebrod_speaker_create_and_setup_socket(void)
     }
 
   /* Connect to the speak to address */
-  speak_to_addr.sin_family = AF_INET;
-  speak_from_addr.sin_port = htons(conf.speak_to_port);
-  memcpy(&speak_to_addr.sin_addr,
-	 &conf.speak_to_in_addr,
+  heartbeat_destination_addr.sin_family = AF_INET;
+  speak_from_addr.sin_port = htons(conf.heartbeat_destination_port);
+  memcpy(&heartbeat_destination_addr.sin_addr,
+	 &conf.heartbeat_destination_in_addr,
 	 sizeof(struct in_addr));
-  if (connect(temp_fd, (struct sockaddr *)&speak_to_addr, sizeof(struct sockaddr_in)) < 0)
+  if (connect(temp_fd, (struct sockaddr *)&heartbeat_destination_addr, sizeof(struct sockaddr_in)) < 0)
     {
       err_debug("_cerebrod_speaker_create_and_setup_socket: connect: %s", 
 		strerror(errno));
